Make drag data source and operation global

In the case when drag and drop is processed between two widgets,
two DragDropClientMac are used. For example, drag a bookmark item
in the bookmark bar and drop it to a folder in the bookmark bar.
The data source and operation should be shared between two
DragDropClientMac in such cases. So make them global variable.

Bug: 673192
Change-Id: Ib98cca2058c4898a17db7bfced97264fbc653e14